--- a/Git/src/index.html
+++ b/Git/src/index.html
@@ -1,22 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="EUC-KR">
-<title>Git ¼Ò°³</title>
-<h1>Çìµå Ãß°¡</h1>
-<h1>Áý¿¡ °¡°í ½Í´Ù</h1>
+<meta charset="UTF-8">
+<title>Git ì†Œê°œ</title>
+<h1>í—¤ë“œ ì¶”ê°€</h1>
+<h1>ì§‘ì— ê°€ê³  ì‹¶ë‹¤</h1>
 </head>
 <body>
 	<header>
 		<h1>Git</h1>
 	</header>
 	<ul>
-		<li>GitÀÌ¶õ</li>
-		<li>¹öÀü ¼³¸í</li>
+		<li>Gitì´ëž€</li>
+		<li>ë²„ì „ ì„¤ëª…</li>
 		<li>Branch</li>
-		<li>³»¿ë Ãß°¡</li>
-		<li>Ãæµ¹</li>
-		<li>Áý¿¡ °¡°í ½Í´Ù</li>
+		<li>ë‚´ìš© ì¶”ê°€</li>
+		<li>ì¶©ëŒ</li>
+		<li>ì§‘ì— ê°€ê³  ì‹¶ë‹¤</li>
 	</ul>
 </body>
 </html>
