--- a/Git/src/index.html
+++ b/Git/src/index.html
@@ -12,7 +12,7 @@
 	</header>
 	<ul>
 		<li>Sync.voke</li>
-		<li>Git이란</li>
+		<li>introduce Git</li>
 		<li>버전 설명</li>
 		<li>Branch</li>
 		<li>내용 추가</li>
